--- a/2_1_GPTCompletions.ipynb
+++ b/2_1_GPTCompletions.ipynb
@@ -96,14 +96,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "96e24fde",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "bi_-Nr6U72DS",
    "metadata": {
@@ -189,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11+"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
