--- a/3_4_SimpleChain.ipynb
+++ b/3_4_SimpleChain.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "editable": true,
     "id": "vOISp5PYq4qi",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,25 +72,31 @@
    "outputs": [],
    "source": [
     "prompt_template = PromptTemplate.from_template(\"Descreva as tendências tecnológicas em {ano}.\")\n",
-    "runnable_sequence = prompt_template | openai\n",
-    "output = runnable_sequence.invoke({\"ano\": \"2024\"})"
+    "runnable_sequence = prompt_template | openai  # Exemplo de simple Chain\n",
+    "output = runnable_sequence.invoke({\"ano\": \"2025\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output:\n",
+      " **  \n",
+      "   - **Resposta:** Em 2025, espera-se que a inteligência artificial e o aprendizado de máquina estejam integrados em quase todos os aspectos da vida cotidiana, desde assistentes pessoais até sistemas de saúde. A Internet das Coisas (IoT) será onipresente, com dispositivos conectados em casas, cidades e indústrias. A realidade aumentada e virtual se tornará comum em entretenimento, educação e treinamento profissional. Além disso, a computação quântica começará a mostrar seu potencial em resolver problemas complexos que são impossíveis para os computadores tradicionais.\n",
+      "\n",
+      "2. **Quais são os desafios éticos da inteligência artificial?**  \n",
+      "   - **Resposta:** Os desafios éticos da inteligência artificial incluem a privacidade dos dados, viés algorítmico, responsabilidade em decisões automatizadas e o impacto no emprego. A coleta e o uso de dados pessoais levantam preocupações sobre consentimento e segurança. O viés nos algoritmos pode perpetuar discriminações existentes. Além disso, a falta de clareza sobre quem é responsável por decisões tomadas por IA, especialmente em casos de falhas ou danos, é uma questão crítica. Por fim, a automação pode levar à perda de empregos, exigindo uma reavaliação das\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Output:\\n\", output)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -98,7 +104,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -112,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
